<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.github.cflint</groupId>
	<artifactId>CFLint</artifactId>
	<version>0.7.3</version>

	<name>CFLint</name>
	<description>
		A static code analysis tool for ColdFusion (in the spirit of FindBugs and Lint). With CFLint, you are able to analyze your ColdFusion code base for code violations.
	</description>
	<url>https://github.com/cflint/CFLint</url>
	<inceptionYear>2013</inceptionYear>
	<organization>
		<name>CFLint</name>
	</organization>

	<developers>
		<developer>
			<name>Ryan Eberly</name>
			<email>ryaneberly@gmail.com</email>
			<organization>cfparser</organization>
			<organizationUrl>https://github.com/ryaneberly</organizationUrl>
		</developer>
		<developer>
			<name>Jerron James</name>
			<email>jjames967@gmail.com</email>
			<organization>cfparser</organization>
			<organizationUrl>https://github.com/jjames967</organizationUrl>
		</developer>
		<developer>
			<name>Denny Valliant</name>
			<email>valliantster@gmail.com</email>
			<organization>cfparser</organization>
			<organizationUrl>https://github.com/denuno</organizationUrl>
		</developer>
	</developers>

	<scm>
		<connection>scm:git:git@github.com:cflint/CFLint.git</connection>
		<developerConnection>scm:git:git@github.com:cflint/CFLint.git</developerConnection>
		<url>git@github.com:cflint/CFLint.git</url>
	</scm>

	<repositories>
	    <repository>
	      <id>cfmlprojects</id>
	      <name>cfmlprojects</name>
	      <url>http://cfmlprojects.org/artifacts</url>
	    </repository>
    	</repositories>
  
	<licenses>
	<license>
            <name>The New BSD License</name>
            <url>http://www.opensource.org/licenses/bsd-license.html</url>
            <distribution>repo</distribution>
        </license>
	</licenses>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>
  
	<dependencies>
		<dependency>
			<groupId>com.github.cfparser</groupId>
			<artifactId>cfparser</artifactId>
			<version>2.2.7</version>
			<type>pom</type>
		</dependency>
		<dependency>
			<groupId>com.github.cfparser</groupId>
			<artifactId>cfml.parsing</artifactId>
			<version>2.2.7</version>
		</dependency>
		<dependency>
			<groupId>com.github.cfparser</groupId>
			<artifactId>cfml.dictionary</artifactId>
			<version>2.2.7</version>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
			<type>jar</type>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>org.jdom</groupId>
			<artifactId>jdom</artifactId>
			<version>1.1.3</version>
			<type>jar</type>
		</dependency>
		<dependency>
			<groupId>org.antlr</groupId>
			<artifactId>antlr4-runtime</artifactId>
			<version>4.5.2-1</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>org.antlr</groupId>
			<artifactId>stringtemplate</artifactId>
			<version>4.0.2</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>org.antlr</groupId>
			<artifactId>antlr4</artifactId>
			<version>4.5.2-1</version>
			<type>jar</type>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>commons-logging</groupId>
			<artifactId>commons-logging-api</artifactId>
			<version>1.1</version>
			<type>jar</type>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>net.htmlparser.jericho</groupId>
			<artifactId>jericho-html</artifactId>
			<version>3.4</version>
			<!-- scope>runtime</scope-->
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>1.7.5</version>
			<type>jar</type>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
			<version>1.2.17</version>
			<type>jar</type>
		</dependency>
 		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>log4j-core</artifactId>
 			<version>2.5</version>
 		</dependency>		
		<dependency>
			<groupId>org.javolution</groupId>
			<artifactId>javolution</artifactId>
			<version>5.2.6</version>
			<type>jar</type>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>commons-cli</groupId>
			<artifactId>commons-cli</artifactId>
			<version>1.2</version>
			<type>jar</type>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>ro.fortsoft.pf4j</groupId>
			<artifactId>pf4j</artifactId>
			<version>0.6</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-log4j12</artifactId>
			<version>1.7.5</version>
			<type>jar</type>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>ant</groupId>
			<artifactId>ant</artifactId>
			<version>1.7.0</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>com.sun.xml.bind</groupId>
			<artifactId>jaxb-impl</artifactId>
			<version>2.1.8</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-core</artifactId>
			<version>2.6.3</version>
		</dependency>
		<dependency>
		  <groupId>com.fasterxml.jackson.module</groupId>
		  <artifactId>jackson-module-jaxb-annotations</artifactId>
		  <version>2.6.3</version>
		</dependency>
		<dependency>
		    <groupId>org.slf4j</groupId>
		    <artifactId>slf4j-api</artifactId>
		    <version>1.7.21</version>
		</dependency>
		<dependency>
		    <groupId>org.slf4j</groupId>
		    <artifactId>slf4j-simple</artifactId>
		    <version>1.7.21</version>
		</dependency>
		<dependency>
			<groupId>net.java.dev.stax-utils</groupId>
			<artifactId>stax-utils</artifactId>
			<version>20070216</version>
			<exclusions>
				<exclusion>
					<artifactId>jsr173-ri</artifactId>
					<groupId>com.bea.xml</groupId>
				</exclusion>
				<exclusion>
					<artifactId>jsr173</artifactId>
					<groupId>javax.xml</groupId>
				</exclusion>
			</exclusions>
		</dependency>
	</dependencies>

	<build>
		<plugins>
		    <plugin>
		      <groupId>org.apache.maven.plugins</groupId>
		      <artifactId>maven-compiler-plugin</artifactId>
		      <version>3.3</version>
		       <configuration>
		        <source>1.7</source>
		        <target>1.7</target>
		       </configuration>
		    </plugin>
			<plugin>
				<artifactId>maven-dependency-plugin</artifactId>
				<executions>
					<execution>
						<phase>process-sources</phase>
						<goals>
							<goal>copy-dependencies</goal>
						</goals>
						<configuration>
							<outputDirectory>${targetdirectory}</outputDirectory>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>appassembler-maven-plugin</artifactId>
				<version>1.10</version>
				<executions>
					<execution>
						<id>assemble-standalone</id>
						<phase>integration-test</phase>
						<goals>
							<goal>assemble</goal>
						</goals>
						<configuration>
							<programs>
								<program>
									<mainClass>com.cflint.main.CFLintMain</mainClass>
									<!-- the name of the bat/sh files to be generated -->
									<name>cflint</name>
								</program>
								<program>
									<mainClass>com.cflint.main.CFLintMain</mainClass>
									<commandLineArguments>
										<commandLineArgument>--ui</commandLineArgument>
									</commandLineArguments>
									<!-- the name of the bat/sh files to be generated -->
									<name>cflint-ui</name>
								</program>
							</programs>
							<platforms>
								<platform>windows</platform>
								<platform>unix</platform>
							</platforms>
							<repositoryLayout>flat</repositoryLayout>
							<repositoryName>lib</repositoryName>
							<configurationDirectory>etc</configurationDirectory>
							<configurationSourceDirectory>src/main/config</configurationSourceDirectory>
							<copyConfigurationDirectory>true</copyConfigurationDirectory>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<artifactId>maven-resources-plugin</artifactId>
				<version>2.6</version>
				<executions>
					<execution>
						<id>copy-resources</id>
						<!-- here the phase you need -->
						<phase>integration-test</phase>
						<goals>
							<goal>copy-resources</goal>
						</goals>
						<configuration>
							<outputDirectory>${project.build.directory}/appassembler/ant</outputDirectory>
							<resources>
								<resource>
									<directory>src/main/ant</directory>
								</resource>
							</resources>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>1.4</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
						<configuration>
							<transformers>
								<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
									<mainClass>com.cflint.main.CFLintMain</mainClass>
								</transformer>
							</transformers>
							<shadedArtifactAttached>true</shadedArtifactAttached>
							<shadedClassifierName>all</shadedClassifierName>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
			    <groupId>org.apache.maven.plugins</groupId>
			    <artifactId>maven-surefire-plugin</artifactId>
			    <version>2.18.1</version>
			    <configuration>
			        <forkCount>1</forkCount>
			        <reuseForks>true</reuseForks>
			        <argLine>-Xmx2048m -XX:MaxPermSize=256m</argLine>
			    </configuration>
			  </plugin>
		</plugins>
	</build>

	<profiles>
		<profile>
			<id>allow-snapshots</id>
			<activation><activeByDefault>true</activeByDefault></activation>
			<repositories>
				<repository>
					<id>snapshots-repo</id>
					<url>https://oss.sonatype.org/content/repositories/snapshots</url>
					<releases><enabled>false</enabled></releases>
					<snapshots><enabled>true</enabled></snapshots>
				</repository>
			</repositories>
		</profile>
		<profile>
			<id>deploy</id>
			<build>
				<plugins>			
		    <!-- deployment -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>2.4</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>2.10.1</version>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-gpg-plugin</artifactId>
				<version>1.5</version>
				<executions>
					<execution>
						<id>sign-artifacts</id>
						<phase>verify</phase>
						<goals>
							<goal>sign</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>license-maven-plugin</artifactId>
				<version>1.7</version>
				<configuration>
					<verbose>false</verbose>
					<addSvnKeyWords>true</addSvnKeyWords>
				</configuration>
				<executions>
					<execution>
						<id>first</id>
						<goals>
							<goal>update-file-header</goal>
						</goals>
						<phase>process-sources</phase>
						<configuration>
							<licenseName>bsd_2</licenseName>
							<roots>
								<root>src/main/java</root>
								<root>src/test</root>
							</roots>
							<includes>
								<include>*.java</include>
							</includes>
							<excludes>
								<exclude>cfml.dictionary*</exclude>
							</excludes>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.sonatype.plugins</groupId>
				<artifactId>nexus-staging-maven-plugin</artifactId>
				<version>1.6.2</version>
				<extensions>true</extensions>
				<configuration>
					<serverId>ossrh</serverId>
					<nexusUrl>https://oss.sonatype.org/</nexusUrl>
					<autoReleaseAfterClose>false</autoReleaseAfterClose>
				</configuration>
			</plugin>
			<!-- end deployment -->
			     </plugins>
		      </build>
	       </profile>
	</profiles>

	<!-- Sonatype: mvn clean package -P deploy -->
	<!-- Sonatype: mvn verify gpg:sign -DskipTests -P deploy -->
	<!-- Sonatype: mvn deploy -DskipTests -P deploy -->
	<!-- Sonatype: mvn nexus-staging:release -DskipTests -->
	<distributionManagement>
		<snapshotRepository>
			<id>ossrh</id>
			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
		</snapshotRepository>
		<repository>
			<id>ossrh</id>
			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
		</repository>
	</distributionManagement>
</project>
